# DQMonstersDB-streamlit

./: .gitignore  .pre-commit-config.yaml  Home.py  README.md  helper_functions.py  main_frontend.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test.py
json_test_files/: breeding_combo_example.json  items_dummy_data.json  monsterandskill_example.json  read_monsters.json  skills_dummy_data.json
pages/: 1_About.py  1_monster_list.py  2_monster_detail.py  2_monster_list.py  3_breeding_mechanics.py  3_monster_detail.py  4_skills_list.py  5_Item_list.py  5_skill_detail.py  6_item_list.py  About.py  item_list.py  monster_detail.py  monster_list.py  skills.py
