[project]
name = "dqmonstersdb-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.38.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
]

# TODO fix missing type annotations with mypy strict
# [tool.mypy]
# strict = true

[[tool.mypy.overrides]]
module = [
    'requests',
    'pandas',
    'streamlit',
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
